--- a/VRChat/40/1143540.html
+++ b/VRChat/40/1143540.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kZSlLF90ZiYHvRzFG76mnbpB9Cu3iU0OF6PpbzX9kbc="></script>
+    "ohElccNvUDLUSKXbK8UlBtXfWv+J8h0uEkJWhiaucjw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【販売終了】オリジナルフルスクラッチ3Dモデル 【つぐみ式「大我（タイガ）」Ver1.2】","description":"【販売終了】オリジナルフルスクラッチ3Dモデル\n【つぐみ式「大我（タイガ）」Ver1.2】\n制作者：つぐみ\n販売元：つぐみ幻像工房（ツグミゲンゾウコウボウ）","url":"https://booth.pm/ja/items/1143540","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ffb245c2-b63f-487c-8b51-de7e1e103d77/i/1143540/08b088aa-cc84-4182-bcd0-8ca72f1042a8_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kZSlLF90ZiYHvRzFG76mnbpB9Cu3iU0OF6PpbzX9kbc="></script>
+    nonce="ohElccNvUDLUSKXbK8UlBtXfWv+J8h0uEkJWhiaucjw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -511,9 +511,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
