--- a/VRChat/53/1147753.html
+++ b/VRChat/53/1147753.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "N6lPGWgX00+K7ug2zwvV3Q3noyUvqC4zojjbmqzjExU="></script>
+    "Z4tjI2cSOiV76IORO5mfAg/EI9VHoVTEURR8luYBaO4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クリスマスプレゼント","description":"VRChatでキャラクターに持たり、ワールドに置いたりできるクリスマスプレゼント箱のモデルの5点セットです。\n\n\n\n","url":"https://booth.pm/ja/items/1147753","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3aa1bab8-cccc-48b8-ac57-d4085ce31722/i/1147753/85839f11-7b7c-41d2-a1ad-38c7e23fbf1b_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N6lPGWgX00+K7ug2zwvV3Q3noyUvqC4zojjbmqzjExU="></script>
+    nonce="Z4tjI2cSOiV76IORO5mfAg/EI9VHoVTEURR8luYBaO4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -512,9 +512,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
