--- a/VRChat/78/1147778.html
+++ b/VRChat/78/1147778.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "YWrzTae2B6kFiDMC4oLME1udaDFkpnkhUZjh9rufLIs="></script>
+    "y8Hx0BAvA+9B9wnFpOm7GUuwl1tZr6AeBJQoWeIiU7g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GA-01A1用マガジン　組み込みライセンス付き","description":"同社製GA-01A1用ライフル用マガジンの「組み込みライセンス」付きです\n\n下記の利用規約を守っていただくことで販売者様のデータに組み込むことが可能です。データは下記URLのマガジンデータと全く同一です\n\nhttps://booth.pm/ja/items/1139776","url":"https://booth.pm/ja/items/1147778","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1147778/427708a8-8436-472d-9ba0-75eab0803b2a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YWrzTae2B6kFiDMC4oLME1udaDFkpnkhUZjh9rufLIs="></script>
+    nonce="y8Hx0BAvA+9B9wnFpOm7GUuwl1tZr6AeBJQoWeIiU7g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -452,9 +452,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
