--- a/VRChat/35/1146935.html
+++ b/VRChat/35/1146935.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "73oYgpvEsA0UoI5kdvXGhZhVNdZdmo32/Vd8jLE+iyA="></script>
+    "OfmpcKPIZZ/QoPhkMzSd6yc+3fzBTsplNP9O3FrtBHQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"WingHairAcc ver1.00","description":"少しサイバーティックな髪飾りです。\n\n三角面：714\n\n説明\n\t・XSfur Shaderを用いたファーが付いたプレハブとStandard Shaderのみを用いたプレハブを用意しています。\n\t・このモデルは一部XSfur Shaderを用いています。お持ちでない場合はStandard Shaderのみのプレハブ、HairAcc_Gemを使用してください。\n\t・XSfurはBoothにてxiexe氏が販売しています(https://booth.pm/ja/items/1084711)\n\n免責事項\nこのデータを使用したことによって生じた問題に関しましては、責任を負いかねます。\n自己責任でのご使用をお願い致します。\n\n使用条件\n\t・修正、改造、商用利用は可能です。\n\t・商用利用する場合は、連絡は必要ありません。\n\t・二次配布は改変後でもご遠慮お願いします。\n\t・政治的、差別的な用途への利用、またはそれに関連したことのあるものに対しての利用はご遠慮ください。\n\t・その他、ご不明なことがあれば下の連絡先にご連絡ください。\n\n2018.12.23\n製作者：アライラク\nTwitter：@AraiRacu\nメール：arairacu@gmail.com","url":"https://booth.pm/ja/items/1146935","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3716aa23-2578-43df-8aa4-dacbc0df9ce1/i/1146935/451ad27e-e961-45c1-b9bc-b6e028d732a4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="73oYgpvEsA0UoI5kdvXGhZhVNdZdmo32/Vd8jLE+iyA="></script>
+    nonce="OfmpcKPIZZ/QoPhkMzSd6yc+3fzBTsplNP9O3FrtBHQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
