--- a/VRChat/59/1146559.html
+++ b/VRChat/59/1146559.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Wj80hGIXCtjhV1+KkEwU88du50RZuJUmIYAA5GiO/RA="></script>
+    "aqGKMg6TLjclDw8Dqp928mNYjPlHkr1kZxARWzUo0/s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【素体付き】オフショルダーセーター　ショートパンツ\u0026スパッツ - 着せ替え用コスチューム","description":"●モデル説明\n【3Dモデル】オフショルダーセーター ショートパンツ\u0026スパッツ - 着せ替え用コスチューム\n制作者：ひるね\n\nポリゴン数：△8866\nマテリアル数：2個\n\nVRChat用のhumanoid対応\nフルボディトラッキング対応\nデスクトップモーション対応モデル同梱\n（VRChat内でしゃがみモーションをした際に腰が逆くの字に折れ難いようにボーンを配置しています）\n\n3Dモデルの着せ替え用に制作されたモデルです、頭部のオブジェクトは同梱されていません\n他の改変可能な3Dモデルと組み合わせてご利用ください\n\n※モデル説明の下に利用規約が記載されているので必ず目を通してから購入をお願いします\n\n\n●内容物\n・shortpantsu Ver.fbx\n・spats Ver.fbx\n　フルボディトラッキング対応のモデルデータです\n\n・shortpantsu Ver Desktop.fbx\n・spats Ver Desktop.fbx\n　デスクトップモーション対応のモデルデータです\n　VRモードでも利用できますが、ボーン配置の関係でフルボディトラッキングの適正は低いです\n\n・基本テクスチャ（.png 13種　.psd 2種）\n　衣装カラーやソックス、スパッツの差分をいくつか用意してます\n　セーター用のNormalMapを追加しました、お好みでお使いください(2018/12/29追記)\n　.psdデータ内にUV展開図も同梱されています、色改変や模様をいれたりする場合の参考にどうぞ\n\n・Animationデータ 4種\n　VRChatで使える指のAnimationデータです\n　fingerpoint,handopen,fist,victory、の4種類を同梱しています\n\n・Hirune sweater.Unitypackage\n　上記のデータを同梱したUnitypackageです\nマテリアルのシェーダーも設定済みです、シェーダーはMnMrShader1_3で設定してありますので、ファイル内に同梱してあるMnMrShader1_3を先にインポートしてください\n\n・簡易着せ替えチュートリアル.txt\n　最下部に同じ内容のものを記載しています\n\n・Readme.txt\n　利用規約のテキストです\n　下部にも同じ内容の利用規約文を記載しているので、必ず目を通してから購入をお願いします","url":"https://booth.pm/ja/items/1146559","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/4d603a5d-0611-4e3c-833c-41454379f04e/i/1146559/b03f328f-3b54-41f3-9394-ebcebd2feb57_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wj80hGIXCtjhV1+KkEwU88du50RZuJUmIYAA5GiO/RA="></script>
+    nonce="aqGKMg6TLjclDw8Dqp928mNYjPlHkr1kZxARWzUo0/s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -622,9 +622,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
