--- a/VRChat/67/1146567.html
+++ b/VRChat/67/1146567.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "6ItEZ9HXXgKY7fYVUiIa6HwCHICQ+l+z2OVV44c2104="></script>
+    "LAJ4nvZ7m829ikodYGMjQxtEJS2DmZ0tLHoMtMhqrts="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ポチ袋","description":"シンプルなポチ袋です。\nアニメーションで取り出してお年玉を配ることが出来ます。\n\n\nポリゴン数２３４△\nFBXファイルとテクスチャが１つ入っています。\n\n-利用規約-\n商用非商用を問わず自由にお使いいただけます。\n\n自作発言と単体での再配布は禁止します。\nアバターペデスタルでの利用や、アバターに組み込む形で譲渡することを許可します。\n\n何かありましたらtwitterアカウント(@makitorion)までお願いします","url":"https://booth.pm/ja/items/1146567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9acc3a5a-1c6d-4055-a999-cdd91a9e8240/i/1146567/ebc444db-4bbb-4f12-a18a-bb1e92e934ec_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6ItEZ9HXXgKY7fYVUiIa6HwCHICQ+l+z2OVV44c2104="></script>
+    nonce="LAJ4nvZ7m829ikodYGMjQxtEJS2DmZ0tLHoMtMhqrts="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -353,9 +353,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
