--- a/VRChat/05/1146505.html
+++ b/VRChat/05/1146505.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yiMCKADeUUJPbgVZBwt6skPvfXys4AIqeDq8dLXuRnY="></script>
+    "B21M8VRnhnkcuFfHwnJtWs4cdIHjKgKTf2Qb4m6Vt/E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「パンダコ」","description":"■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル「パンダコ」です。\nVRChatでの使用を想定しています。\n\nパンダになりたい女の子です。\n\n\n※フルボディトラッキングでの動作は確認しておりません。\nLip Sync VRChat標準 + MMD標準\nシェイプキー 34種（Eye Tracking、Lip Syncを除く）\nEye Tracking対応\nDynamic Bone対応（前髪、横髪、、後髪、胸）\n\nsynqarkさんのArktoon-Shadersを使わせていただいています。","url":"https://booth.pm/ja/items/1146505","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1146505/43cb95d4-dd9b-4fd7-b22f-12b664522ce3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yiMCKADeUUJPbgVZBwt6skPvfXys4AIqeDq8dLXuRnY="></script>
+    nonce="B21M8VRnhnkcuFfHwnJtWs4cdIHjKgKTf2Qb4m6Vt/E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -529,9 +529,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
